feat:spring-redis

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>spring-kafka-sample</module>
         <module>spring-rabbit-sample</module>
+        <module>spring-redis-sample</module>
     </modules>
 
     <properties>
