--- a/spring-redis-sample/src/main/resources/application.yml
+++ b/spring-redis-sample/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   redis:
     database: 0
-    host: 192.168.15.128
+    host: localhost
     port: 6379
     password: password
     jedis:
