--- a/spring-rabbit-sample/src/main/resources/application.yml
+++ b/spring-rabbit-sample/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   rabbitmq:
-    host: 192.168.15.128
+    host: localhost
     port: 5672
-    username: admin
+    username: user
     password: password
